Fix: Overflow content in mat-tab-body component

--- a/src/app/user/components/product-container/product-container.component.css
+++ b/src/app/user/components/product-container/product-container.component.css
@@ -32,8 +32,6 @@
 }
 
 .food-card h1 {
-
-    min-height: 45px;
     font-size: 1.25rem;
     line-height: 20px;
 }
@@ -43,12 +41,12 @@
 }
 
 .container-food-card {
-    width: 100%;
+    width: auto;
     height: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+
     gap: 0.5rem;
     margin: 0.75rem;
 }
