--- a/src/app/user/pages/take-order/take-order.component.css
+++ b/src/app/user/pages/take-order/take-order.component.css
@@ -1,11 +1,13 @@
 .take-order {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .productos {
     flex-grow: 0.80;
+    max-height: 85vh;
+    justify-content: space-between;
 }
 
 .mat-tab-label {
@@ -46,8 +48,8 @@
 }
 
 .mat-tab-group {
-    border-radius: 0 0 1rem 1rem;
-    width: 60%;
+    border-radius: 1rem;
+    width: 70%;
     box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.25);
     height: auto;
 }
